[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/atlantis.headline-bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/GenericButton.gd" type="Script" id=3]
[ext_resource path="res://ToolNodes/AnimateOnEntry.gd" type="Script" id=4]
[ext_resource path="res://Map/Tilesets/bricks.db32.png" type="Texture" id=5]
[ext_resource path="res://ToolNodes/AudioClip.gd" type="Script" id=6]
[ext_resource path="res://ToolNodes/AudioClipPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Audio/MouseEntered.wav" type="AudioStream" id=8]
[ext_resource path="res://UI/Audio/Start.wav" type="AudioStream" id=9]

[sub_resource type="Resource" id=5]
script = ExtResource( 6 )
clip = ExtResource( 8 )
volume = -20.0
pitch = 1.0

[sub_resource type="Resource" id=6]
script = ExtResource( 6 )
clip = ExtResource( 9 )
volume = -5.0
pitch = 1.0

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "animate_entry"
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 288 ), Vector2( -1568, 288 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SceneButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "animate_exit"
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1568, 288 ), Vector2( 512, 288 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SceneButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SceneButton")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "load_scene"
}, {
"args": [ "queue_free" ],
"method": "call_deferred"
} ]
}

[node name="Control" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
manual_toggle = true

[node name="SceneButton" type="TextureButton" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 416.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 256.0
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
next = "res://CompleteScenes/player_test.tscn"
anim = NodePath("../AnimationPlayer")
aud = NodePath("../AudioClipPlayer")
hover_clip = SubResource( 5 )
press_clip = SubResource( 6 )

[node name="RichTextLabel" type="Label" parent="SceneButton"]
margin_right = 192.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Hello World"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate_entry = SubResource( 3 )
anims/animate_exit = SubResource( 2 )

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512, 288 )
scale = Vector2( 17, 17 )
texture = ExtResource( 1 )

[node name="AudioClipPlayer" parent="." instance=ExtResource( 7 )]

[connection signal="mouse_entered" from="SceneButton" to="SceneButton" method="_on_SceneButton_mouse_entered"]
[connection signal="pressed" from="SceneButton" to="SceneButton" method="_on_TextureButton_pressed"]
